روبوت  تعديل: [[bat-smg:Kateguorėjė:Fizėka]]

--- a/Category:Fiisigis.mw
+++ b/Category:Fiisigis.mw
@@ -6,7 +6,7 @@
 [[ar:تصنيف:فيزياء]]
 [[ast:Categoría:Física]]
 [[az:Kateqoriya:Fizika]]
-[[bat-smg:Kategorija:Fizėka]]
+[[bat-smg:Kateguorėjė:Fizėka]]
 [[be-x-old:Катэгорыя:Фізыка]]
 [[bg:Категория:Физика]]
 [[br:Rummad:Fizik]]
@@ -30,7 +30,7 @@
 [[fr:Catégorie:Physique]]
 [[fy:Kategory:Natuerkunde]]
 [[ga:Catagóir:Fisic]]
-[[gl:Category:Física]]
+[[gl:Categoría:Física]]
 [[he:קטגוריה:פיזיקה]]
 [[hi:श्रेणी:भौतिकी]]
 [[hr:Kategorija:Fizika]]
@@ -38,7 +38,7 @@
 [[hy:Կատեգորիա:Ֆիզիկա]]
 [[ia:Categoria:Physica]]
 [[id:Kategori:Fisika]]
-[[io:Category:Fiziko]]
+[[io:Kategorio:Fiziko]]
 [[is:Flokkur:Eðlisfræði]]
 [[it:Categoria:Fisica]]
 [[ja:Category:物理学]]
