*Empty MediaWiki Message*

--- a/Qansaxle.mw
+++ b/Qansaxle.mw
@@ -1,2 +1,4 @@
-Qansaxle waa tuulo ka tirsan dagmada goldogob ee Gobolka Mudug, Soomaaliya.
+Qansaxle waa tuulo ka tirsan dagmada goldogob ee Gobolka [[Mudug]], [[Soomaaliya]].
 Waxaana daga tuulada beesha Fiqi xasan ee ka tirsan Reer Maxamed Muumin iyo Beesha Maalis moge.
+
+[[en:Qansaxle]]
