--- a/Ceel_Ciid.mw
+++ b/Ceel_Ciid.mw
@@ -1,1 +1,1 @@
-Ceel Ciid Waa ceelka biyaha ee ugu weyn Gobolka Mudug, Wuxuuna Ku yaalaa Magaalada bartamaha Goldogob.
+Ceel Ciid Waa ceelka biyaha ee ugu weyn Gobolka [[Mudug]], Wuxuuna Ku yaalaa Magaalada bartamaha [[Goldogob]].
