--- a/1971.mw
+++ b/1971.mw
@@ -9,4 +9,124 @@ __TOC__
 
 [[Category:Sanad]]
 
+[[af:1971]]
+[[als:1970er#1971]]
+[[am:1971 እ.ኤ.አ.]]
+[[an:1971]]
+[[ar:1971]]
+[[ast:1971]]
+[[av:1971]]
+[[ay:1971]]
+[[az:1971]]
+[[bat-smg:1971]]
+[[be:1971]]
+[[be-x-old:1971]]
+[[bg:1971]]
+[[bh:१९७१]]
+[[bn:১৯৭১]]
+[[bpy:মারি ১৯৭১]]
+[[br:1971]]
+[[bs:1971]]
+[[ca:1971]]
+[[co:1971]]
+[[cs:1971]]
+[[csb:1971]]
+[[cv:1971]]
+[[cy:1971]]
+[[da:1971]]
+[[de:1971]]
+[[el:1971]]
+[[en:1971]]
+[[eo:1971]]
+[[es:1971]]
+[[et:1971]]
+[[eu:1971]]
+[[fa:۱۹۷۱ (میلادی)]]
+[[fi:1971]]
+[[fo:1971]]
 [[fr:1971]]
+[[frp:1971]]
+[[fy:1971]]
+[[ga:1971]]
+[[gd:1971]]
+[[gl:1971]]
+[[he:1971]]
+[[hi:1971]]
+[[hr:1971.]]
+[[ht:1971 (almanak gregoryen)]]
+[[hu:1971]]
+[[hy:1971]]
+[[ia:1971]]
+[[id:1971]]
+[[ilo:1971]]
+[[io:1971]]
+[[is:1971]]
+[[it:1971]]
+[[ja:1971年]]
+[[jv:1971]]
+[[ka:1971]]
+[[kg:1971]]
+[[kk:1971]]
+[[kn:೧೯೭೧]]
+[[ko:1971년]]
+[[ksh:Joohr 1971]]
+[[ku:1971]]
+[[kw:1971]]
+[[la:1971]]
+[[lb:1971]]
+[[lij:1971]]
+[[lmo:1971]]
+[[ln:1971]]
+[[lt:1971]]
+[[lv:1971]]
+[[map-bms:1971]]
+[[mk:1971]]
+[[mr:इ.स. १९७१]]
+[[ms:1971]]
+[[nah:1971]]
+[[nap:1971]]
+[[nds:1971]]
+[[nl:1971]]
+[[nn:1971]]
+[[no:1971]]
+[[nov:1971]]
+[[nrm:1971]]
+[[oc:1971]]
+[[os:1971]]
+[[pam:1971]]
+[[pdc:1971]]
+[[pi:१९७१]]
+[[pl:1971]]
+[[pt:1971]]
+[[rmy:1971]]
+[[ro:1971]]
+[[ru:1971 год]]
+[[scn:1971]]
+[[se:1971]]
+[[sh:1971]]
+[[simple:1971]]
+[[sk:1971]]
+[[sl:1971]]
+[[sq:1971]]
+[[sr:1971]]
+[[su:1971]]
+[[sv:1971]]
+[[sw:1971]]
+[[ta:1971]]
+[[te:1971]]
+[[th:พ.ศ. 2514]]
+[[tk:1971]]
+[[tl:1971]]
+[[tr:1971]]
+[[tt:1971]]
+[[ty:1971]]
+[[uk:1971]]
+[[uz:1971]]
+[[vec:1971]]
+[[vi:1971]]
+[[vls:1971]]
+[[wa:1971]]
+[[zea:1971]]
+[[zh:1971年]]
+[[zh-min-nan:1971 nî]]
+[[zh-yue:1971年]]
