--- a/Af-Ingiriisi.mw
+++ b/Af-Ingiriisi.mw
@@ -5,6 +5,7 @@ Wadamada luqada ingiriiska looga hadlo sida afkooda hooyo oo kale ayaa ka mid ah
 
 [[Category:Luqadaha]]
 
+[[aa:Enqlizxsh - English]]
 [[af:Engels]]
 [[als:Englische Sprache]]
 [[am:እንግሊዝኛ]]
