روبوت  إضافة: ca, chy, id, kw, la, sco, se, sw

--- a/Breinigerberg.mw
+++ b/Breinigerberg.mw
@@ -9,15 +9,20 @@
 
 [[af:Breinigerberg]]
 [[ast:Breinigerberg]]
+[[ca:Breinigerberg]]
+[[chy:Breinigerberg]]
 [[da:Breinigerberg]]
 [[de:Breinigerberg]]
 [[en:Breinigerberg]]
 [[eo:Breinigerberg]]
+[[id:Breinigerberg]]
 [[io:Breinigerberg]]
 [[is:Breinigerberg]]
 [[it:Breinigerberg]]
 [[ja:ブライニガーベルグ]]
 [[ksh:Breenijerberch]]
+[[kw:Breinigerberg]]
+[[la:Breinigerberg]]
 [[lb:Breinigerberg]]
 [[nds:Breinigerberg]]
 [[nds-nl:Breinigerberg]]
@@ -26,5 +31,8 @@
 [[pdc:Breinigerberg]]
 [[pt:Breinigerberg]]
 [[ru:Брайнигерберг]]
+[[sco:Breinigerberg]]
+[[se:Breinigerberg]]
 [[simple:Breinigerberg]]
+[[sw:Breinigerberg]]
 [[vo:Breinigerberg]]
