--- a/Baaqa_Caalamiga_ee_Xuquuqda_Aadanaha.mw
+++ b/Baaqa_Caalamiga_ee_Xuquuqda_Aadanaha.mw
@@ -191,6 +191,7 @@ Baaqan kuma jiraan wax loo fasiri karo in micnahoodu yahay in Dawlad, koox ama q
 [[ko:세계인권선언]]
 [[ln:Lisakoli ya molongo ya makoki ya moto]]
 [[lt:Visuotinė žmogaus teisių deklaracija]]
+[[lv:Vispārējā cilvēktiesību deklarācija]]
 [[mk:Декларација за правата на човекот]]
 [[ms:Perisytiharan Hak Asasi Manusia Sejagat]]
 [[nl:Universele Verklaring van de Rechten van de Mens]]
