*Empty MediaWiki Message*

--- a/Daarood.mw
+++ b/Daarood.mw
@@ -14,4 +14,4 @@ Taariikhda qabiilka baaxada weyn ee Soomaaliyeed ee Daarood ma ahan mid lagu koo
 Fadlan qoraalkaaga ku salaysan taariikhda ummada Soomaaliyeed waad kusoo dari kartaa boggan.
 Qore Maxamed C/raxman Doymare
 
-caadi maha inaba daarood waliba nimnka mj ah waniman boqora ah
+Soomaaliya Soomaali baaleh.
