--- a/Ayaan_Hirsi_Ali.mw
+++ b/Ayaan_Hirsi_Ali.mw
@@ -2,7 +2,7 @@
 
 '''Ayaan Xirsi Cali''' (Ayaan Xirsi Magan) (° [[Muqdisho]] 13 [[Nofeembar]] [[1969]]).
 
-[[Category:Soomaaliya|Hirsi Ali, Ayaan]]waa dhilo waynaatay oo ku caanbaxday inay diinta islaamka caydo , nimanka cadaanka ah na guska u jaqda, ayaan hirsi ali , waxay gusjaqida ku bilowday iyadoo sagaal sano jirtaa. abaheed iyo hoyadeed siilka ayeey ka gubeen si ay u joojiso was mada, lakiin markii ay wadanka holand timid ayeey jaanis u heshay inay wasto waxii ay awood, iyadoo wastay nin holandis ah oo flimka submision la sameeyey, ayaan hada waxaa laga wasaa USA oo bush iyo niman wasmada somalida jecel baa wasa, ilahey waxaan uga baryeeynaa inay ayaan xirsi uu aduunka ku cadaabo balaayo ala ha u kenee , siilka nabar kaa soo bax, inkaari kugu dhacday. 
+[[Category:Soomaaliya|Hirsi Ali, Ayaan]]waa dhilo waynaatay oo ku caanbaxday inay diinta islaamka caydo , nimanka cadaanka ah na guska u jaqda, ayaan hirsi ali , waxay gusjaqida ku bilowday iyadoo sagaal sano jirtaa. abaheed iyo hoyadeed siilka ayeey ka gubeen si ay u joojiso was mada, lakiin markii ay wadanka holand timid ayeey jaanis u heshay inay wasto waxii ay awood, iyadoo wastay nin holandis ah oo flimka submision la sameeyey, ayaan hada waxaa laga wasaa USA oo bush iyo niman wasmada somalida jecel baa wasa, ilahey waxaan uga baryeeynaa inay ayaan xirsi uu aduunka ku cadaabo balaayo ala ha u kenee , siilka nabar kaa soo bax, inkaari kugu dhacday.
 
 [[ar:آيان حرصي علي]]
 [[bg:Аян Хирси Али]]
@@ -24,4 +24,5 @@
 [[ru:Хирси, Айаан Али]]
 [[sh:Ayaan Hirsi Ali]]
 [[sv:Ayaan Hirsi Ali]]
+[[vec:Ayaan Hirsi Ali]]
 [[vi:Ayaan Hirsi Ali]]
