--- a/Sanad.mw
+++ b/Sanad.mw
@@ -13,6 +13,7 @@ Sanad (Luqada carabiga "[[:ar:عام]] ama "السنة" ) waa waqtiga u dhaxeeyo
 [[be:Год]]
 [[be-x-old:Год]]
 [[bg:Година]]
+[[br:Bloaz]]
 [[bs:Godina]]
 [[ca:Any]]
 [[ceb:Tuig]]
@@ -94,3 +95,4 @@ Sanad (Luqada carabiga "[[:ar:عام]] ama "السنة" ) waa waqtiga u dhaxeeyo
 [[yo:Ìgbàs]]
 [[zh:年]]
 [[zh-min-nan:Nî]]
+[[zh-yue:年]]
