روبوت  إضافة: [[ay:Inlis aru]], [[be:Англійская мова]]

--- a/Af-Ingiriisi.mw
+++ b/Af-Ingiriisi.mw
@@ -14,10 +14,12 @@ Wadamada luqada ingiriiska looga hadlo sida afkooda hooyo oo kale ayaa ka mid ah
 [[ar:لغة إنجليزية]]
 [[arc:ܠܫܢܐ ܐܢܓܠܝܐ]]
 [[ast:Inglés]]
+[[ay:Inlis aru]]
 [[az:İngilis dili]]
 [[bar:Englische Sproch]]
 [[bat-smg:Onglu kalba]]
 [[bcl:Ingles]]
+[[be:Англійская мова]]
 [[be-x-old:Ангельская мова]]
 [[bg:Английски език]]
 [[bn:ইংরেজি ভাষা]]
