--- a/Talk:Cabdullaahi_Yuusuf.mw
+++ b/Talk:Cabdullaahi_Yuusuf.mw
@@ -1,1 +1,4 @@
-Bogan waxaa loogu talagay ka wada hadalka ku saabsan maqaalkiisa. --[[User:Mimursal|M. I. Mursal]] 08:34, 4 April 2007 (UTC)
+<[[Image:math>Bogan waxaa loogu talagay ka wada hadalka ku saabsan maqaalkiisa. --[[User:Mimursal|M. I. Mursal]] 08:34, 4 April 2007 (UTC)
+'''[[awle oo ku nool magaalada garowe gaar ahaan xaafada wadajir isagoo aad u xiiseeya waxbarashada i]]''' ''
+== Italic text ==
+<math>Insert formula here</math>''</math>]]
