--- a/Cabdullaahi_Yuusuf.mw
+++ b/Cabdullaahi_Yuusuf.mw
@@ -1,6 +1,12 @@
 Waxa uu ku dhashay Gaalkacyo, [[Puntland]] – [[Somaaliya]] bishii Diseenbar [[1934]] kii. Waxaa u dhaxda marwo Xaawa Abdi Samatar oo ay isu dhaleen afar caruur ah: Maxamed, Maryan, Khadiija iyo Axmed 
 
-==WAXBARASHADA ==
+=           
+== awle cabdulle aadan ==
+ awle oo ku nool magaalada garowe gaar ahaan xaafada wadajir isagoo aad u xiiseeya waxbarashada i
+
+
+
+=WAXBARASHADA ==
 
 cabdulaahi waxa uu wax ku bartay italy rusia iyo wadamo kale waxa uu haystaa shihaadooyin kala duwan, C/laahi Yuusuf Axmed waxaa uu wax ka yaqaanaa Aqoonta Maadiga Sida Psychology-ga iyo Sociology-ga.
 
