/* awle cabdulle aadan */

--- a/Cabdullaahi_Yuusuf.mw
+++ b/Cabdullaahi_Yuusuf.mw
@@ -3,8 +3,7 @@ Waxa uu ku dhashay Gaalkacyo, [[Puntland]] – [[Somaaliya]] bishii Diseenbar [[
 =           
 == awle cabdulle aadan ==
  awle oo ku nool magaalada garowe gaar ahaan xaafada wadajir isagoo aad u xiiseeya waxbarashada i
-
-
+[[Image:Example.jpg]]
 
 =WAXBARASHADA ==
 
