روبوت  تعديل: [[de:British Broadcasting Corporation]]

--- a/BBC.mw
+++ b/BBC.mw
@@ -15,7 +15,7 @@
 [[cs:BBC]]
 [[cy:BBC]]
 [[da:BBC]]
-[[de:BBC]]
+[[de:British Broadcasting Corporation]]
 [[en:BBC]]
 [[eo:BBC]]
 [[es:British Broadcasting Corporation]]
