*Empty MediaWiki Message*

--- a/Dimishiq.mw
+++ b/Dimishiq.mw
@@ -1,1 +1,2 @@
-waxaa weeye wadan ur badan
+waa wadan qurux badan 
+'''ooooooooooooooooooooooooooooooooooooooooooooooooooo'''oooooooooooooooooooooooooooooooooooooooooooo
