--- a/Dimishiq.mw
+++ b/Dimishiq.mw
@@ -1,1 +1,25 @@
+Luuqada englishka waxaa lagu dhahaa (Damascus).luqada  carabiga waxa loo yaqaa naa دمشق(Dimashq) waxaan loo yaqaanaaa  mar marka qaar (ash-Shām)(الشام). Waxayna tahay caasimada dalka Suuriya.Waxayna kamid tahay wadama ugu taariikhda dheer ee aduunka. Dadka kunool waxay gaarayaan 4.5 milyan
 
+
+
+==History==
+{{Infobox World Heritage Site
+| WHS         = Ancient City of Damascus
+| infoboxwidth= 250px
+| Image       = [[Image:Damas-street.jpg|230px|Damascus at sunset]]
+| State Party = {{SYR}}
+| Type        = Cultural
+| Criteria    = i, ii, iii, iv, vi
+| ID          = 20
+| Region      = [[Arab States]]
+| Year        = 1979
+| Session     = 3rd
+}}
+
+
+
+
+
+
+
+Damascus(دمشق transliteration: Dimashq, also commonly known as  ash-Shām) is the capital and largest city of Syria. It is among the oldest continuously inhabited cities in the world (see section: Ancient history), before Al Fayyum, and Gaziantep. Its current population is estimated at about 4.5 million.[citation needed] The city is a governorate by itself, and the capital of the governorate of Rif Dimashq (Rural Damascus).
