*Empty MediaWiki Message*

--- a/Dimishiq.mw
+++ b/Dimishiq.mw
@@ -1,20 +1,8 @@
 Luuqada englishka waxaa lagu dhahaa (Damascus).luqada  carabiga waxa loo yaqaa naa دمشق(Dimashq) waxaan loo yaqaanaaa  mar marka qaar (ash-Shām)(الشام). Waxayna tahay caasimada dalka Suuriya.Waxayna kamid tahay wadama ugu taariikhda dheer ee aduunka. Dadka kunool waxay gaarayaan 4.5 milyan
 
 
+[[Image:DamascusMerjeh.jpg|thumb|right|Almarja Square in downtown Damascus]]
 
-==History==
-{{Infobox World Heritage Site
-| WHS         = Ancient City of Damascus
-| infoboxwidth= 250px
-| Image       = [[Image:Damas-street.jpg|230px|Damascus at sunset]]
-| State Party = {{SYR}}
-| Type        = Cultural
-| Criteria    = i, ii, iii, iv, vi
-| ID          = 20
-| Region      = [[Arab States]]
-| Year        = 1979
-| Session     = 3rd
-}}
 
 
 
