--- a/Dimishiq.mw
+++ b/Dimishiq.mw
@@ -1,7 +1,7 @@
 Luuqada englishka waxaa lagu dhahaa (Damascus).luqada  carabiga waxa loo yaqaa naa دمشق(Dimashq) waxaan loo yaqaanaaa  mar marka qaar (ash-Shām)(الشام). Waxayna tahay caasimada dalka Suuriya.Waxayna kamid tahay wadama ugu taariikhda dheer ee aduunka. Dadka kunool waxay gaarayaan 4.5 milyan
 
 
-[[Image:DamascusMerjeh.jpg|thumb|right|Almarja Square in downtown Damascus]]
+[[Image:DamascusMerjeh.jpg|thumb|right|Magaalada dimishiq oo ah caasimada wadanka Suuriya]]
 
 
 
