*Empty MediaWiki Message*

--- a/Dimishiq.mw
+++ b/Dimishiq.mw
@@ -1,7 +1,7 @@
 {{Infobox City
 |official_name           = Damascus
 |native_name             = دمشق
-|nickname                = (Al Fayhaa) The Fragrant City
+|wadanka                = (suuriya)
 |motto                   = 
 |image_skyline           = DamascusSkyline.jpg
 |imagesize               = 300px
