*Empty MediaWiki Message*

--- a/Dimishiq.mw
+++ b/Dimishiq.mw
@@ -1,4 +1,4 @@
-|image_skyline           = DamascusSkyline.jpg
+
 
 
 
@@ -8,6 +8,12 @@ Luuqada englishka waxaa lagu dhahaa (Damascus).luqada  carabiga waxa loo yaqaa n
 
 [[Image:DamascusMerjeh.jpg|thumb|right|Magaalada dimishiq oo ah caasimada wadanka Suuriya]]
 
+[[Image:Damascus-National-Museum.JPG|thumb|right|Damascus National Museum.]]
+*[[Damascus University]]
+*[[Syrian Virtual University]]
+*[[Arab European University]]
+*Higher Institute of Applied Science and Technology [[HIAST]]
+*[[International University for Science and Technology]]
 
 
 
