*Empty MediaWiki Message*

--- a/Dimishiq.mw
+++ b/Dimishiq.mw
@@ -2,18 +2,13 @@
 
 
 
-
-Luuqada englishka waxaa lagu dhahaa (Damascus).luqada  carabiga waxa loo yaqaa naa دمشق(Dimashq) waxaan loo yaqaanaaa  mar marka qaar (ash-Shām)(الشام). Waxayna tahay caasimada dalka Suuriya.Waxayna kamid tahay wadama ugu taariikhda dheer ee aduunka. Dadka kunool waxay gaarayaan 4.5 milyan
+Luuqada englishka waxaa lagu dhahaa (Damascus).luqada  carabiga waxa loo yaqaa naa دمشق(Dimashq) waxaan loo yaqaanaaa  mar marka qaar (ash-Shām)(الشام). Waxayna tahay caasimada dalka Suuriya.Waxayna kamid tahay wadama ugu taariikhda dheer ee aduunka. Dadka kunool waxay gaarayaan 4.5 milyan.
 
 
 [[Image:DamascusMerjeh.jpg|thumb|right|Magaalada dimishiq oo ah caasimada wadanka Suuriya]]
 
 [[Image:Damascus-National-Museum.JPG|thumb|right|Damascus National Museum.]]
-*[[Damascus University]]
-*[[Syrian Virtual University]]
-*[[Arab European University]]
-*Higher Institute of Applied Science and Technology [[HIAST]]
-*[[International University for Science and Technology]]
+
 
 
 
