*Empty MediaWiki Message*

--- a/Dimishiq.mw
+++ b/Dimishiq.mw
@@ -1,19 +1,9 @@
 
 
 
-
 Luuqada englishka waxaa lagu dhahaa (Damascus).luqada  carabiga waxa loo yaqaa naa دمشق(Dimashq) waxaan loo yaqaanaaa  mar marka qaar (ash-Shām)(الشام). Waxayna tahay caasimada dalka Suuriya.Waxayna kamid tahay wadama ugu taariikhda dheer ee aduunka. Dadka kunool waxay gaarayaan 4.5 milyan.
 
 
 [[Image:DamascusMerjeh.jpg|thumb|right|Magaalada dimishiq oo ah caasimada wadanka Suuriya]]
 
-[[Image:Damascus-National-Museum.JPG|thumb|right|Damascus National Museum.]]
-
-
-
-
-
-
-
-
-Damascus(دمشق transliteration: Dimashq, also commonly known as  ash-Shām) is the capital and largest city of Syria. It is among the oldest continuously inhabited cities in the world (see section: Ancient history), before Al Fayyum, and Gaziantep. Its current population is estimated at about 4.5 million.[citation needed] The city is a governorate by itself, and the capital of the governorate of Rif Dimashq (Rural Damascus).
+[[Image:Damascus-National-Museum.JPG|thumb|right|museom ka  dimishq.]]
