--- a/Dimishiq.mw
+++ b/Dimishiq.mw
@@ -1,9 +1,10 @@
 
 
-
 Luuqada englishka waxaa lagu dhahaa (Damascus).luqada  carabiga waxa loo yaqaa naa دمشق(Dimashq) waxaan loo yaqaanaaa  mar marka qaar (ash-Shām)(الشام). Waxayna tahay caasimada dalka Suuriya.Waxayna kamid tahay wadama ugu taariikhda dheer ee aduunka. Dadka kunool waxay gaarayaan 4.5 milyan.
 
 
 [[Image:DamascusMerjeh.jpg|thumb|right|Magaalada dimishiq oo ah caasimada wadanka Suuriya]]
 
 [[Image:Damascus-National-Museum.JPG|thumb|right|museom ka  dimishq.]]
+
+[[Image:Damascus by night.JPG|thumb|right|Damascus by night, pictured from Jabal Qasioun; the green spots are [[minaret]]s]]
