*Empty MediaWiki Message*

--- a/Dimishiq.mw
+++ b/Dimishiq.mw
@@ -1,5 +1,4 @@
 
-
 Luuqada englishka waxaa lagu dhahaa (Damascus).luqada  carabiga waxa loo yaqaa naa دمشق(Dimashq) waxaan loo yaqaanaaa  mar marka qaar (ash-Shām)(الشام). Waxayna tahay caasimada dalka Suuriya.Waxayna kamid tahay wadama ugu taariikhda dheer ee aduunka. Dadka kunool waxay gaarayaan 4.5 milyan.
 
 
@@ -7,4 +6,4 @@ Luuqada englishka waxaa lagu dhahaa (Damascus).luqada  carabiga waxa loo yaqaa n
 
 [[Image:Damascus-National-Museum.JPG|thumb|right|museom ka  dimishq.]]
 
-[[Image:Damascus by night.JPG|thumb|right|Damascus by night, pictured from Jabal Qasioun; the green spots are [[minaret]]s]]
+[[Image:Damascus by night.JPG|thumb|right|Magaalada Dimshq oo laga soo sawiray buurta loo yaqaano Qasioun]]
