*Empty MediaWiki Message*

--- a/Dimishiq.mw
+++ b/Dimishiq.mw
@@ -1,7 +1,53 @@
 Luuqada englishka waxaa lagu dhahaa (Damascus).luqada  carabiga waxa loo yaqaa naa دمشق(Dimashq) waxaan loo yaqaanaaa  mar marka qaar (ash-Shām)(الشام). Waxayna tahay caasimada dalka Suuriya.Waxayna kamid tahay wadama ugu taariikhda dheer ee aduunka. Dadka kunool waxay gaarayaan 4.5 milyan.
 
+{{wiktionary|Damascus}}
+{{Infobox City
+|official_name           = Damascus
+|native_name             = دمشق
+|nickname                = (Al Fayhaa) The Fragrant City
+|motto                   = 
+|image_skyline           = DamascusSkyline.jpg
+|imagesize               = 300px
+|image_caption           = Damascus Skyline
+|image_flag              = 
+|image_seal              = DamascusLogo.jpg
+|image_map  = Damascus-map.png 
+|map_caption             = Damascus' location within Syria
+|subdivision_type        = [[Countries of the world|Syria]] 
+|subdivision_name        = [[Syria]]
+|subdivision_type1       = [[Governorates of Syria|Governorates]]
+|subdivision_name1       = [[Damascus Governorate]]
+|subdivision_type2       = 
+|subdivision_name2       = 
 
-DamascusSkyline.jpg
+|leader_title1           =  <!-- for places with, say, both a mayor and a city manager -->
+|leader_name1            = 
+|leader_title2           =
+|leader_name2            =
+|leader_title3           =
+|leader_name3            = 
+|established_title       = 
+|established_date        = 9000 B.C
+|established_title2      =  <!-- Incorporated (town) -->
+|established_date2       = 
+|established_title3      =  <!-- Incorporated (city) -->
+|established_date3       = 
+|area_magnitude          = 
+|area_total_km2             = 573
+|area_total_sq_mi        = 
+|area_land_km2              = 
+|area_land_sq_mi         = 
+|area_water_km2             = 
+|area_water_sq_mi        = 
+|area_water_percent     = 
+|area_urban_km2             = 
+|area_urban_sq_mi        = 
+|area_metro_km2             = 1200
+|area_metro_sq_mi        = 
+|population_as_of       = 2005
+|population_note        =
+|population_total       = 4,500,000 (~6,500,000 metro. area)
+
 
 
 
