*Empty MediaWiki Message*

--- a/Dimishiq.mw
+++ b/Dimishiq.mw
@@ -13,3 +13,75 @@ Luuqada englishka waxaa lagu dhahaa (Damascus).luqada  carabiga waxa loo yaqaa n
 [[Image:Damascus-National-Museum.JPG|thumb|right|museom ka  dimishq.]]
 
 [[Image:Damascus by night.JPG|thumb|right|Magaalada Dimshq oo laga soo sawiray buurta loo yaqaano Qasioun]]
+
+[[am:ደማስቆ]]
+[[ar:دمشق]]
+[[arc:ܕܪܡܣܘܩ]]
+[[frp:Damas]]
+[[az:Dəməşq]]
+[[bn:দামেস্ক]]
+[[be-x-old:Дамаск]]
+[[bs:Damask]]
+[[br:Damask]]
+[[bg:Дамаск]]
+[[ca:Damasc]]
+[[cs:Damašek]]
+[[cy:Damascus]]
+[[da:Damaskus]]
+[[de:Damaskus]]
+[[dv:ދިމިޝްޤު]]
+[[et:Damaskus]]
+[[el:Δαμασκός]]
+[[es:Damasco]]
+[[eo:Damasko]]
+[[eu:Damasko]]
+[[fa:دمشق]]
+[[fr:Damas]]
+[[gl:Damasco - دمشق]]
+[[got:𐌳𐌰𐌼𐌰𐍃𐌺𐍉]]
+[[ko:다마스쿠스]]
+[[hy:Դամասկոս]]
+[[hr:Damask]]
+[[io:Damascus]]
+[[id:Damaskus]]
+[[is:Damaskus]]
+[[it:Damasco]]
+[[he:דמשק]]
+[[ka:დამასკო]]
+[[sw:Dameski]]
+[[ht:Damas]]
+[[ku:Şam]]
+[[la:Damascus]]
+[[lij:Damasco]]
+[[lt:Damaskas]]
+[[ln:Damas]]
+[[hu:Damaszkusz]]
+[[mk:Дамаск]]
+[[ml:ദമാസ്കസ്]]
+[[ms:Damsyik]]
+[[nl:Damascus]]
+[[ja:ダマスカス]]
+[[no:Damaskus]]
+[[nn:Damaskus]]
+[[nov:Damaskus]]
+[[pms:Damasco]]
+[[pl:Damaszek]]
+[[pt:Damasco (cidade)]]
+[[ro:Damasc]]
+[[qu:Damasku]]
+[[ru:Дамаск]]
+[[scn:Damascu]]
+[[simple:Damascus]]
+[[sk:Damask]]
+[[sl:Damask]]
+[[cu:Дамаскъ]]
+[[sr:Дамаск]]
+[[sh:Damask]]
+[[fi:Damaskos]]
+[[sv:Damaskus]]
+[[tg:Димишқ]]
+[[tr:Şam]]
+[[uk:Дамаск]]
+[[ur:دمشق]]
+[[vo:Dimäjk]]
+[[zh:大馬士革]]
