--- a/Helsinki.mw
+++ b/Helsinki.mw
@@ -1,5 +1,5 @@
 [[Image:Location of Helsinki in Finland.png|thumb]]
-'''Helsinki''' (562 570 inh.)  waa magaalo-madaxda dalka [[Finland]].
+'''Helsinki''' (562 570 inh.)  hello man  [[Finland]].
 [[Image:Suurkirkko Helsinki maaliskuu 2002 IMG 0629.JPG|thumb|left]]
 [[Image:Mannerheimintie Helsinki-Panorama.JPG|left|thumb|500px|Mannerheimintie]]
 [[Category:Yurub]]
