--- a/Helsinki.mw
+++ b/Helsinki.mw
@@ -1,8 +1,9 @@
 [[Image:Location of Helsinki in Finland.png|thumb]]
-'''Helsinki''' (562 570 inh.)  hello man  [[Finland]].
+'''Helsinki''' (562 570 inh.)  Helsinki waxaa weeye caasimada iyo magalada ugu weyn ee wadanka Finland. Waxaana loo yaqaana afka swedush ka Helsingfors.Helsinki waxay ku taalaa koonfurta wadanka Finland. Dadka ku nool magaalada helsinki waxaa weeye 568,146 waxaayna tirakoobkaan dhacay (31 October 2007). Helsinki magaalooyinka u dhow dhow waxaa weeye (Espoo, Vantaa, Kauniainen markii la is ku doro dadka ku nool gobalkaas waxay gaarayaan 1,000,000  [[Finland]].
 [[Image:Suurkirkko Helsinki maaliskuu 2002 IMG 0629.JPG|thumb|left]]
 [[Image:Mannerheimintie Helsinki-Panorama.JPG|left|thumb|500px|Mannerheimintie]]
 [[Category:Yurub]]
+[[Image:Kauppakeskus Kamppi, Helsinki.jpg|thumb|245px|[[Kamppi Center]] is a shopping and transportation complex in the Kamppi district in the centre of Helsinki.]]
 
 [[af:Helsinki]]
 [[am:ሄልሲንኪ]]
