*Empty MediaWiki Message*

--- a/Helsinki.mw
+++ b/Helsinki.mw
@@ -3,7 +3,7 @@
 [[Image:Suurkirkko Helsinki maaliskuu 2002 IMG 0629.JPG|thumb|left]]
 [[Image:Mannerheimintie Helsinki-Panorama.JPG|left|thumb|500px|Mannerheimintie]]
 [[Category:Yurub]]
-[[Image:Kauppakeskus Kamppi, Helsinki.jpg|thumb|245px|[[Kamppi Center]] is a shopping and transportation complex in the Kamppi district in the centre of Helsinki.]]
+[[Image:Kauppakeskus Kamppi, Helsinki.jpg|thumb|245px|Magaalada Helsinki center keeda oo la dhaho Kamppi.]]
 
 [[af:Helsinki]]
 [[am:ሄልሲንኪ]]
