Fadlan Qoraalkaaga Hagaaji oo daarood si fiican Taariikhda ugu qor

--- a/Talk:Daarood.mw
+++ b/Talk:Daarood.mw
@@ -1,1 +1,4 @@
-hi
+                     Bismilaahi Alraxmaani Alraxiim
+
+waryaa nacallaa kugu yaal wasakhiiyo waa maxay qabyaaladani , qabiilka sharax ayaa lagu idhiye , ee maxaad u caayisaaye ku haya , qabiilada kalaba si fiican ayaad u soo bandhigtay taariikhtoode ee maxaa daarood kaa haya nijaas yahaw , daarood wuu kaa sharaf badan yahay , waa qabiil aay dadkoo dhani ay yaqaanaan , waa qabiilka soomaaliya ka mid ah oo ugu badan , nacallaaaaa ku yaal baad tahay , daarood ragee ka dhashay waa taqaan nijaas yahaw , ragee soomaaliya xoreeyey ee xabashida iyo guumaysiga ka irryey waa ayo nijaas yahaw isweydii waa daarood nacas yahaw ( Axmed Gurey , Sayid Maxamed Cabdilaahi , Jaalle Maxamed Siyad Barri...iyo qaar ciidaa ka badan Ilaahay ha unaxariistee) , wasakh nijaas eeey ah ayaad tahay daarood muxuu kuu geestay bal sheeg nijaas yahaw?
+Markii aa guumaysiga (Taliaaniga) aa la ga saariyey koonfurta yaa nagabax idhi (siyad barri Ilaahay ha unaxareesto) iyadoo qabaa'ilka kale ayey dooniyeen inuu gumeesigu inuu sii jooga uu wadanka uu hagaajiyo sookii Siyaad Barri (Ilaahay ha una xareestee) idhi ka bax uu hanoo joogin oo hadaad xaas leedahay , xaaskaaga dalkaaga ula noqo , dhulna nagu ma lahid , ee hadana wadanka hagaajiyey maaha imika sootan xamar oo itoobyaan iska fadhiyo ,,,, waskhow hagaaji qoraalkaaga intaanan ku hagaajin adiga laftigaaga........
