*Empty MediaWiki Message*

--- a/Category:Dagaalada.mw
+++ b/Category:Dagaalada.mw
@@ -4,7 +4,7 @@ Ninkii Duuliyaha ka ahaa diyaaradii ku garacay bamkii Nukliyeerka magaalada Hori
 Ninkan oo lagu magacaabi jirey Paul Warfield Tibbets ayaa geeriyoodey isagoo da’diisu ay aheyd 92 sano jir, waxaana uu geeriyoodey isagoon bixin wax cudur daar ah ama aan ka qoomameyn falkii uu ku xasuuqay kumanaan kun oo qof.
 
  
-Atom Bamkii lagu garaacay Hiroshima & Nagasaki 
+Atom Bamkii lagu garaacay Hiroshima & Nagasaki & wakinaawa
 Paul Warfield Tibbets wuxuu 6-dii bishii August sanadkii 1945-kii diyaaradii uu duuliyaha ka ahaa oo lagu magacaabi jirey Anola Gay uu bam lagu magaacay Little Boy uu ku ridey magaalada Horoshima, waxaana ninkaasi oo ka sheekaynaya wixii uu subaxaasi geyste uu yiri.  
 Magaaladii qurxda badneyn ee qoraxdu ifineysay, sida fasiixa ahna ugu jeednay daqiiqado ka hor, waxay isu badashay meel fool xun oo uuro ka baxeyso", waxa uuna intaa raaciyay in hadii ey dadka qaar arki lahaayeen ay aad u argagixi lahaayeen wixii halkaasi ka dhacay ee isagu uu sameeyey.  
 Magaalada Nagasaki oo uu ka muuqdo hoog iyo ba'a xoogan 
