/* Sayid Ciise Masiix oo caddaynaya Ilaahnimadiisa */

--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -576,6 +576,7 @@ Maxaa yeelay muu ahayn mid asalkiisii hore dhoobo laga abuuray oo markaa kaddibn
 Xaqiiqaduse waxay tahay in uu yahay Ruuxdii Daahirka ahayd oo muddo ku dhex negaatay ilma-galeenka Maryam, qaabkaasoo ah qaab aan loo abuurin cid kale oo inagu soo martay sooyaalka diimeed tan iyo inta uu Eebbe dunida iyo dadkiisaba abuuray. 
 
 Haddii uu Sayid Ciise Masiix ahaan lahaa bashar caadi ah may dhici lahayn in uu noqdo kan keliya ah oo kutubta oo dhan ay ku tilmaamayaan in uu yahay Mid Daahir ah.
+Lacnad ha ku dhacdo qofkii siddaa cadeeyey
 
 ===Maxaa Isaga loogu yeeraa Wiilka Ilaah?===
 Runtii dad markiiba baa aad uga carooda kolkay maqlaan Sayid Ciise Masiix oo loogu yeerayo Wiilka Ilaah. Waxayna ku andacoodaan in uusan Eebbe wax dhalin lana dhalin isla markaana aanu mudnayn in Isaga laga yeelo sida aabbe wax dhalay oo kale. 
