/* Sayid Ciise Masiix oo caddaynaya Ilaahnimadiisa */

--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -413,7 +413,7 @@ Waxaana amuurtaas sawir macquul ah inaga siinaysa aayadda 32aad ee Cutubka 9aad,
 
 Sidaa awgeed waxaannu halkaas ka dareemi karaynaa inay shuqulladu yihiin kuwo ay samayntoodu u gaar yihiin Eebbaha Qaaddirka ah. Taa iyada ahna waxay si muuqata uga markhaati kacaysaa awoodda Ilaahnimo ee Wiilka. Waana sababtaas sababta uu Sayid Ciise Masiix ku noqonayo aadane maaddaama uu jir aadane ku dhex jiray Isagoo haddana Ilaah ah.
 
-===Sayid Ciise Masiix oo caddaynaya Ilaahnimadiisa===
+[[Link title]]===Sayid Ciise Masiix oo caddaynaya Ilaahnimadiisa===
 Dhanka kale waxaa laga yaabaa inay dadka qaarkii is-weydiinayaan sababta uu Sayid Ciise Masiix si toos ah ugu hor oran waayay dadka in uu yahay Ilaah. 
 Runtii haddii aynu si fiican ugu kuurgalno Injiilka waxaynu ka helaynaa meelo badan oo uu Sayid Ciise Masiix ku caddaynayo Ilaahnimadiisa, haddii xitaa dhinac layska dhigo wixii uu sameeyay oo mucjisooyin ahaa. 
 
@@ -576,7 +576,7 @@ Maxaa yeelay muu ahayn mid asalkiisii hore dhoobo laga abuuray oo markaa kaddibn
 Xaqiiqaduse waxay tahay in uu yahay Ruuxdii Daahirka ahayd oo muddo ku dhex negaatay ilma-galeenka Maryam, qaabkaasoo ah qaab aan loo abuurin cid kale oo inagu soo martay sooyaalka diimeed tan iyo inta uu Eebbe dunida iyo dadkiisaba abuuray. 
 
 Haddii uu Sayid Ciise Masiix ahaan lahaa bashar caadi ah may dhici lahayn in uu noqdo kan keliya ah oo kutubta oo dhan ay ku tilmaamayaan in uu yahay Mid Daahir ah.
-Lacnad ha ku dhacdo qofkii siddaa cadeeyey
+Lacnad ha ku dhacdo qofkii siddaa cadeeyey.Lacnad ha ku dhacdo qofkii siddaa dhahay!!!
 
 ===Maxaa Isaga loogu yeeraa Wiilka Ilaah?===
 Runtii dad markiiba baa aad uga carooda kolkay maqlaan Sayid Ciise Masiix oo loogu yeerayo Wiilka Ilaah. Waxayna ku andacoodaan in uusan Eebbe wax dhalin lana dhalin isla markaana aanu mudnayn in Isaga laga yeelo sida aabbe wax dhalay oo kale. 
