/* Maxaa Isaga loogu yeeraa Wiilka Ilaah? */

--- a/Kiristaanka.mw
+++ b/Kiristaanka.mw
@@ -578,61 +578,7 @@ Xaqiiqaduse waxay tahay in uu yahay Ruuxdii Daahirka ahayd oo muddo ku dhex nega
 Haddii uu Sayid Ciise Masiix ahaan lahaa bashar caadi ah may dhici lahayn in uu noqdo kan keliya ah oo kutubta oo dhan ay ku tilmaamayaan in uu yahay Mid Daahir ah.
 Lacnad ha ku dhacdo qofkii siddaa cadeeyey.Lacnad ha ku dhacdo qofkii siddaa dhahay!!!
 
-===Maxaa Isaga loogu yeeraa Wiilka Ilaah?===
-Runtii dad markiiba baa aad uga carooda kolkay maqlaan Sayid Ciise Masiix oo loogu yeerayo Wiilka Ilaah. Waxayna ku andacoodaan in uusan Eebbe wax dhalin lana dhalin isla markaana aanu mudnayn in Isaga laga yeelo sida aabbe wax dhalay oo kale. 
-Haddaba Masiixiyiinta laftigoodu ma diiddana qodobkaaas ah in uusan Eebbe wax dhalin lana dhalin. Iyadoo ay taas jirto ayay haddana oggol yihiin yeerista Sayid Ciise Masiix loogu yeerayo Wiilka Ilaah. 
-
-Taana waxay ku timid rumaynta ay rumaynayaan Erayga Eebbe oo xaqa ah. Waxayna aaminsan yihiin haddii ay taas oggolaan waayaan inay ka dhigan tahay inay iyaguna Eebbe addeeci waayeen sida kuwa uu sheydaanku duufsaday oo kale oo ay quluubtooduna engegan tahay. Waayo Eebbe laftigiisa ayaaba ugu yeeray “Wiilkayga aan jecelahay.” 
-Sida ku cad Cutubka 3aad aayadda 17aad ee Injiilka sida uu Matayos u qoray, sidan bayna aayaddu leedahay: 
-
-“Oo cod baa samooyinka ka lahaa, kanu waa Wiilkayga aan jecelahay, oo aan ku faraxsanahay.” (Matayos # 3:17).
-
-Haddiise aynu dhinac kale wax iska tusaalayno, su’aasha meesha taal waxay tahay marka dadka masaarida ah loogu yeerayo “Abnaa-u-niil” oo macanaheedu yahay “Ubadki-Niil”, ma waxaa la oran karaa webiga Niil ayay ka soo farcameen oo ah aabbihii iyaga ka dhalay hooyooyinkoodii hore? Jawaabtuse waa maya. 
-Balse waxaa halkaas ka muuqanaya in uu jiro macno kale oo maldahan, kaasoo ah inay yihiin kuwo ay noloshoodu ku xiran tahay webigaas. Midda kale mar kastoo uu Eebbe la hadlayo dadkiisa wuxuu wax u fahamsiiyaa hadba sida ay iyagu wax ku garan karaan. 
-
-Taana waxaan uga jeedaa xilligii uu Sayid Ciise Masiix dunida yimid meesha uu hawsha Boqortooyadiisa ka bilaabay ayaa ahayd deegaannada Yuhuudda dhexdooda. Sida aynu ka warqabnana quruun kastoo meel deggan waxay leedahay erayo iyada u gaar ah oo ay ugu halqabsato dhacdooyinka qaarkood oo la xiriira hab-dhaqanka bulshadeeda, sida xilligaasiba ay dadyowga Yuhuudda ah shakhsiyaadka ugu kala adeegsan jireen erayada kala ah: “Ina Sheydaan” iyo “Ina Ilaah”. 
-
-Erayga hore waxay ku sifayn jireen qofka markaas xumaanta la deriska ah, erayga dambana waxay ugu yeeri jireen qofka aan wax ceebaal ah lahayn oo nadiifka ah. Laakinse xaqiiqada jirta ayaa ah in kan ina Sheydaan loogu yeerayo aanu ahayn mid uu dhalay Sheydaanka laftigiisa, hase yeeshee dembiyada uu geysanayo awgood loo oran jiray ina Sheydaan. Sida midka kaleba uusan u ahayn dhashii Eebbe, balse suubanaanta awgeed loo dooray in lagu maamuuso derejada ah ina Ilaah. 
-
-Marka maaddaama uu Sayid Ciise Masiix ahaa Badbaadiye xagga Eebbe ka yimid ayuu Eebbe doonayay in uu u muujiyo dadkiisa in uu Sayid Ciise Masiix yahay mid aan wax iin ah lahayn oo suubane ah. 
-
-Marka taa laftigeeda waa arrin macquul ah in uu Eebbe sidaa u doortay in uu Sayidka ugu yeero “Wiilkayga”, si ay dadka ku gartaan in midka uu Eebbe “Wiilkiisa” ku tilmaamayo uu yahay mid dadyowga kale ka goonni ah oo aan lahayn wax ceebaal ah iyo dembi toona. 
-Annaga laftigeenna xitaa haddii aynu u fiirsanno sababta uu Eebbe ugu yeeray Sayid Ciise Masiix “Wiilkayga” waxaa kalee inoo soo baxaya in uu jiro xiriir soke oo labadooda ka dhexeeya, kaasoo ah mid aad iyo aad uga duwan xiriirka uu Eebbe la leeyahay aadanaha intiisa kale. 
-
-Inkastoo ay jiraan sababo badan oo ay dadku ku garan karaan ayaan haddana jecelahay inaan halkan qodobbada ugu muhiimsan wax yar uun ka taabto. 
-Haddaba kuwaas waxaa ka mid ah tusaalaha ah sida waalidka wanaagsan uu u jecel yahay ilmihiisa oo kale. 
-
-Waayo waxaynu wada ogsoon nahay in uu waalidku jacayl xad-dhaaf ah u qabo ubadkiisa. Hase yeeshee inta badan waxaynu aragnaa waalidka ilmo keliya ah dhalay in uu ka sii xagjiro midka carruurta badan leh. 
-
-Maxaa yeelay waalidka carruurta badan dhalay haddii uu mid ka dhinto carruurtiisa inkastoo uu u xanuunsanayo, haddana wuxuu haystaa qaar kale oo uu kaga samri karo kii ka geeriyooday. Laakinse waalidka ay ilmuhu madiga ku yihiin marka ilmuhu ka dhinto waxaa soo mara tiiraanyo ka daran tiiraanyadii soo martay waalidkaa kale. 
-
-Marka Eebbena si uu inoogu muujiyo jacaylka weyn oo uu u qabo dadkiisa ugana madax furto ciqaabta dembiyadooda ayuu u doorbiday in uu aadanaha wax u tusiyo sida aabbe wiilkiisa oo madiga ku ahaa bixinaya oo kale, si ay dunidu tusaale cad uga qaadato dhacdadaas iyada ah. 
-
-Haddii aynu innaguna u sii fiirsanno mawduucan isaga ah, waxaynu fahmaynaa inay aabbe iyo wiilkiisu isku qoys yihiin farcan ahaanna ay meel qura ka soo wada jeedaan. Waayo waxaynu ogsoon nahay in Eebbe aanu wax dhalin lana dhalin, balse midka uu ku sheegayo in uu yahay Wiilkiisa aanu shaki ku jirin in uu yahay mid ay isagu haayb wadaagaan oo asal ahaanna ku abtirsada Boqortooyadiisa. 
-
-Waana taas ayaynu oran karnaa sababta ugu weyn oo uu Eebbe u qorsheeyay in Sayid Ciise Masiix uu ugu yeero ‘Wiilkayga’ isla mar ahaantaana u oggolaaday in lagu qodbo isku-tallaabta si uu dhiiggiisa qaaliga ah kafaaragud ugu noqdo dembiyada dadka oo dhan, kaasoo uu u huray jacaylka uu dadkiisa u qabo awgii. 
-
-Sidii uu Nebi Ibraahiimba ugu quuray wiilkiisii Isxaaq ahaa in uu u gawraco muuijin uu muujinayo jacaylka uu Eebbe u qabay awgii. 
-
-Bixinta dhiigga qaaliga ah ee Sayid Ciise Masiixna waa arrin si run ah uga markhaati kacaysa jacaylka weyn oo uu Eebbe u qabo dadkiisa. 
-Maxaa yeelay qof aadane ah si kastoo uu kuu jecel yahay kama suurtowdo in uu adiga dartaa u huro kii isaga madiga ku ahaa oo uu dunida ka eeganayay. 
-
-Dhanka kalena waa muhiim inaynu garanno jacaylka Eebbe iyo kan aadanaha in aanay ahayn wax isu dhow oo lays barbar-dhigi karo. Sababtoo ah waxaynu dunida ku aragnaa dad berigii hore aad iyo aad isu jeclaa oo haddana markii dambe nacayb xun isu qaaday. 
-Laakinse jacaylka Eebbe uu u qabo dadkiisa iyagoo dembiileyaal ah, waa mid aan dhammaad lahayn oo xaqiiqdii aad uga duwan midka uu waalid u qaadi karo ubadkiisa amaba ay laba ruux oo aadane ah isu qabaan. 
-
-Waayo jacaylka Eebbe ma aha mid sida kan aadanaha oo kale markiiba idlaada, balse jacaylkiisu waa mid jiray haddana jira siina jiri doona oo waaraya weligiiba. Aamiin!
-Taasna waxay ku caddahay aayadda 16aad ee Cutubka 3aad ee sida uuYooxanaa Injiilka u qoray taas oo oranaysa: 
-
-“Ilaah intuu dunida jacayl u qabay ayuu siiyey wiilkiisa madigaa in midkastoo isaga rumaystaa uusan lumin laakiinse uu lahaado nolosha weligeed ah”. (Yooxanaa # 3:16)
-
-Mar haddiiba Sayid Ciise Masiix awgii lagu helayo nolol daa’im ah, waxaa halkaas ka muuqanaysa in jacaylka Eebbe u qabo dadkiisa uu yahay mid aan dhammaad lahayn. 
-Haddiise uu mid idlaanayo ahaan lahaa waxaan dhici lahayn in uu Eebbe u bixiyo Sayid Ciise Masiix sidii qurbaan gawrac lagu jiiday oo kale si uu dadkiisa ugu noqdo kafaaragud xagga dunuubtooda. 
-
-Kolleyse Eebbe ayuumbaa garanaya sababta dhabta ah oo uu Sayid Ciise Masiix ugu yeeray “Wiilkayga.” 
-
-Midda kale wuxuu Sayid Ciise Masiix dunida iyo dadka dhexdiisa shuqullada Ilaah ugu fuliyay sida wiil aabbihiis wakiil uga ah oo kale. Taasna waxaa ka tarjumaya oo laga dhadhansan karaa aayadaha 36-38aad ee Cutubka 10aad ee Injiilka sida uu Yooxanaa u qoray, halkaasoo uu Sayid Ciise Masiix iskaga difaacayay dadkii diiddanaa awooddiisa wakiilnimo, wuxuuna yidhi: 
-
-“Ma waxaad ku leedihiin kii Aabbuhu qodduus ka dhigay oo xagga dunida u soo diray, waad caytantaa, waayo, waxaan idhi, Wiilka Ilaah baan ahay? Haddaanan samayn shuqullada Aabbahay, ha i rumaysanina. Laakiin haddaan sameeyo, inkastoo aydaan i rumaysanin, shuqullada rumaysta, inaad ogaataan oo garataan in Aabbuhu igu jiro, anna Aabbaha aan ku jiro.” (Yooxanaa # 10:36-38). 
+buu
 
 ===Eebbe waa meel walba jooge===
 Ugu horrayntii, bal aynu u soo noqonno qodobkeennii ahaa faah-faahinta Ilaahnimada Sayid Ciise Masiix. 
