روبوت  إضافة: [[zea:Scheikunde]]

--- a/Kimisteri.mw
+++ b/Kimisteri.mw
@@ -142,6 +142,7 @@ Kimistari waa barashada aasaasiga ah ee sayniska maatarka( matter) iyo iskudhisk
 [[war:Kímika]]
 [[xh:IKhemistri]]
 [[yi:כעמיע]]
+[[zea:Scheikunde]]
 [[zh:化学]]
 [[zh-classical:化學]]
 [[zh-min-nan:Hòa-ha̍k]]
