*Empty MediaWiki Message*

--- a/Category:Diin.mw
+++ b/Category:Diin.mw
@@ -1,1 +1,3 @@
-Qeybtaan waxaa ku jira diimanka aduunka.
+Caqiido: 
+Waa wax rumayn ama wax aaminid.
+Caqiidada Islaamka: Waa rumaynta diinta islaamka.
