*Empty MediaWiki Message*

--- a/Neef.mw
+++ b/Neef.mw
@@ -1,4 +1,6 @@
-NEEF: 
+== NEEF: ==
+ 
 Neeftu waa cudur ku dhaca hawa mareenka (xubnaha laga neefsado). Waxaa isu urura dhuumaha hawadu ay marto, qofkana waxaa ku adkaata inuu si caadi ah u neefsado. 
 
 Dhuumahaas (Hawa mareenka) waxaa ku wareegsan muruqyo. Muruqyadaas ayaa isu urura, taasina wexey sababtaa in dhuuntii hawadu ay maraysey ay yaraato.
+--[[Special:Contributions/213.89.9.208|213.89.9.208]] 00:40, 10 Diseembar 2007 (UTC)Abdirashid
