/* Insolin == ama  == Insuliin */

--- a/Ganac.mw
+++ b/Ganac.mw
@@ -1,7 +1,8 @@
 Ganac: 
 Ganacu waa qanjir weyn oo bogga hoostiisa ku yaala. Ganacu wuxuu soo saaraa sadex dheecaan oo kala ah : ''insolin'' , ''glucagon'' iyo ''somatostatin''. 
 
-== Insolin == ama  == Insuliin ==
+== Insolin == 
+Insolin ama Insuliin   
 Insolin-ta waa hormoon ama dheecaan waxaana soo saara unugyada "beeta" oo ka mid ah kuwa ganacu ka samaysan yahay. 
 Insoliinta shaqadeedu waa burburinta sonkorta (glucose). dheecaankan marka uu ganacu soo saaro si toos ah ayaa loogu daraa dhiigga. Wixii glucose (sonkor) ahaa ee dhiigga la socdey ayuu u sahlaa iney galaan unugyada gudohooda si loo burburiyo. Xuubka unugga ayey glucoskii ka  dustaa oo gudaha unugga ayey sonkortii gashaa. meeshaas iney gashona waxaa sahley insoliiinta. Insoliinta laáanteed ma suurtoobeyso iney unugyadu qaataan sonkorta dhiigga dhex wareegeysa.
 Insolintu waa hormoon ka  dhisan 51 amino-asiidh.
