/* Maalmaha dalkeena lagu qadariyo lana xuso sanada walba waxaa ka mid ah: */

--- a/KMG_Soomaaliya.mw
+++ b/KMG_Soomaaliya.mw
@@ -181,7 +181,7 @@ halka liibaanta qoryooley ay tahey wax soo saarka soomaalida meesh wax soo saar 
 *21. Warshadda sonkorta [[Jowhar]] waxaa la aasaasay [[1962]]dii 
 *22. Warshadda Caanaha Xanar waxaa la dhisay [[1966]]kii
 *23. Warshadda Hilibka ee [[Kismaayo]] waxaa la dhisay [[1973]]kii.
-
+*24. Warshadda Sonkorta ee Mareerey waxaa la aasaasay 1972 dii
 [[Category:Dowladaha Afrika]]
 [[Category:Wadamada Afrika]]
 
