*Empty MediaWiki Message*

--- a/1990.mw
+++ b/1990.mw
@@ -4,8 +4,8 @@ __TOC__
 
 ==Dhacdooyin==
 [[burburkii soomaaliya]]:- xiligan waxa burburay hadhaagii xukuumada soomaaliya oo soomaliya waxay isku badashay dal bilaa xukun ah
-burburka midawgii suufyeeti ama shuuciyada:- xiligan waxa burburay midawgii soofyeetii 
-jabintii dayrka barliin:- waqtigan waxa la jabiyay dayrka barliin ee kala badhayay magaaladaasi una kala qaybin jiray shuuciyad iyo dimuqraadiyad.
+[[burburka midawgii suufyeeti]] ama [[shuuciyada]]:- xiligan waxa burburay midawgii soofyeetii 
+[[jabintii dayrka barliin]]:- waqtigan waxa la jabiyay dayrka barliin ee kala badhayay magaaladaasi una kala qaybin jiray shuuciyad iyo dimuqraadiyad.
 ==Dhalashooyin==
 ==Dhimashooyin==
 ==Madaxda Aduunka==
