*Empty MediaWiki Message*

--- a/1991.mw
+++ b/1991.mw
@@ -1,17 +1,33 @@
 [[1990]] - '''1991''' - [[1992]]
 
-Sanadkii 1991 salaamu caleykum: sanadkani waxa uu bilow u ahaa bur bur soo qorshaysnaa muddo 30 sano ah waa tan iyo markii xornimada aan qaadanaye, sanadkani waxa uu dhamays tiray himadii iyo riyadii cadowga [[Somalia|soomaaliyeed]] oo ahayd in ay maalin arkaan soomaali oo kala yaacasan dagaalamaysa isna cunaysa ,waana sanadka aan weynay midnimadii iyo qaranimadii oo soo celin daaye la la, yahay meel calankii buluuga ahaa laga taago waayo 30 calan oo kale ayaa taagan .
-1991 umadii soomaliyeed waxay gashay marxalad madow mugdi ah, waxaana waxaas keenay kooxo lahaa dano gaar ah oo ku qarabanaayey magac qabiil balse qabiilka naftiisa aan u danayney.
-Waxaan umadda soomaaliyeed ugu baaqayaa in ay qabiil ka waantoobaan una soo noqdaan qaranimo iyo midnimo gacmahana is qabsadaan aamiin.
+sanadkani waxa uu ku bilawday maalin salaasa ah.sanadkan kalandarka chineseka waxa loo yaqaan sanadkii laxda.
     
 Maxamad bashiir
 
 __TOC__
 
-[[Ali Mahdi Muhammad]] (1991-[[1995]])
+
 
 ==Dhacdooyin==
+
+== '''Janaayo ([[january]])''' ==
+
+*[[janaayo 12]]:- Ururka [[Qaramada Midoobay]] ayaa ogolaaday in la xoreeyo dalka [[Kuwayd]] iyada oo la adeegsanayo awood [[milatari]].
+*[[janaayo 15]]:-
+*waxa dhacay waqtigii ay [[Qaramada midoobay]] u qabteen ciidamada [[Ciraaq]] in ay kaga baxaan [[Kuwayd]].
+*Herald 4 ayaa noqday Boqorka [[Noorway]]
+*[[Janaayo 26]]:-Madaxwaynihii [[Soomaaliya]] [[Maxamed Siyaad Barre]] ayaa ka baxay qasrigii madaxtooyada ee [[Villa Soomaaliya]].
+ 
+== [[Febraayo]] ([[February]]) ==
+*Febraayo 22:- [[Ciraaq]] ayaa ogolaatay heshiiskii xabad joojinta ahaa ee uu soo bandhigay Ruushku, laakiin waxa diiday maraykanka.\
+
+== [[Maarso]]([[march]]) ==
+*[[maarso 31]]:- doorashadii u horaysay ayaa ka dhacday dalka [[Albaaniya]]
+
+== [[Abriil]] ([[april]]) ==
+
 ==Dhalashooyin==
+
 ==Dhimashooyin==
 ==Madaxda Aduunka==
 
