روبوت  تعديل: [[ksh:Moohnd (Kalländo)]]

--- a/Bilaha.mw
+++ b/Bilaha.mw
@@ -61,7 +61,7 @@ Sanadka miilaadiyada wuxuu ka koobanyahay 12 biloood. Macagyada bilahaas dhnaka 
 [[kg:Ngonda (manaka)]]
 [[kk:Ай]]
 [[kn:ತಿಂಗಳು]]
-[[ksh:Moohnd]]
+[[ksh:Moohnd (Kalländo)]]
 [[kw:Mis]]
 [[la:Mensis]]
 [[lad:Mez]]
