--- a/KMG_Soomaaliya.mw
+++ b/KMG_Soomaaliya.mw
@@ -11,7 +11,7 @@
 |leader_title1            = [[President of Somalia|President]]
 |leader_title2            = [[Prime Minister of Somalia|Prime Minister]]
 |leader_name1             = [[Abdullahi Yusuf Ahmed]]
-|leader_name2             = [[Ali Mohammed Ghedi]]
+|leader_name2             = [[Nur Hassan Hussein]]
 |capital                  = [[Muqdisho]]
 |latd=2 |latm=02 |latNS=N |longd=45 |longm=21 |longEW=E
 |largest_city             = Magaalo madax
