*Empty MediaWiki Message*

--- a/Finland.mw
+++ b/Finland.mw
@@ -6,8 +6,8 @@
 |image_coat                  = Coat of arms of Finland.svg
 |image_map                   = EU location FIN.png
 |national_motto              = none<sup>1</sup>
-|national_anthem             = ''[[Maamme#Our Land|Our Land]]''
-|official_languages          = [[Finnish language|Finnish]], [[Swedish language|Swedish]]
+|Heesta_Calanka             = ''[[Maamme#Our Land|Our Land]]''
+|Luuqada          = [[Finnish language|Finnish]], [[Swedish language|Swedish]]
 |capital                     = [[Helsinki]]
 |latd=60 |latm=10 |latNS=N |longd=24 |longm=56 |longEW=E
 |largest_city                = capital
