روبوت  تعديل: [[ksh:Dütschland]]

--- a/Jarmal.mw
+++ b/Jarmal.mw
@@ -88,7 +88,7 @@ Wadan [[Yurub]] ku yaala oo [[faransis]]ka iyo [[denmark]]i xad la wadaaga. Waan
 [[kn:ಜರ್ಮನಿ]]
 [[ko:독일]]
 [[ks:जर्मनी]]
-[[ksh:Deutschland]]
+[[ksh:Dütschland]]
 [[ku:Almanya]]
 [[kv:Германия]]
 [[kw:Almayn]]
