--- a/Nuur_Cade.mw
+++ b/Nuur_Cade.mw
@@ -1,4 +1,6 @@
 '''Nur Hassan Hussein''', also known as '''Nur Adde''', has been the [[Prime Minister of Somalia]] since November 2007.
 
+[[Category:Soomaaliya]]
+
 [[el:Νουρ Χασάν Χουσεΐν]]
 [[pl:Nur Hassan Hussein]]
