--- a/Nuur_Cade.mw
+++ b/Nuur_Cade.mw
@@ -1,6 +1,7 @@
-'''Nur Hassan Hussein''', also known as '''Nur Adde''', has been the [[Prime Minister of Somalia]] since November 2007.
+'''Nur Hassan Hussein''', also known as '''Nur Adde''', has been the Prime Minister of [[Soomaaliya]] since Novembaar [[2007]].
 
 [[Category:Soomaaliya]]
 
 [[el:Νουρ Χασάν Χουσεΐν]]
+[[en:Nur Hassan Hussein]]
 [[pl:Nur Hassan Hussein]]
