*Empty MediaWiki Message*

--- a/Nuur_Cade.mw
+++ b/Nuur_Cade.mw
@@ -1,4 +1,4 @@
-'''Nur Hassan Hussein''', also known as '''Nur Adde''', has been the Prime Minister of [[Soomaaliya]] since Novembaar [[2007]].
+'''Nur Hassan Hussein''', also known as '''Nur Adde''', has been the Prime Minister of [[Soomaaliya]] since [[Nofeembar]] [[2007]].
 
 [[Category:Soomaaliya]]
 
