--- a/Category:Bayoloji.mw
+++ b/Category:Bayoloji.mw
@@ -3,10 +3,77 @@
 '''    waamaxay baayology?'''
 ----
 
-[[fr:Catégorie:Biologie]]
+
 Baayoolojigu waa cilmiga barashada noolaha. baylooji waxa uu ka yimid kalmada laatiinka ah ee macnaheegu yahay "bio" noole iyo "logy" barasho. Cilmiga bayoolojigu waxa uu ka mid yahay cilmiyada ugu balaadhan ee la barto. Bayoolojiga waxa loo qaybin karaa laba dhir iyo xayawaan iyada oo loo eegayo habka [[cunto samaysiga]] ee uu leeyahay nooluhu ama waxa loo qaybin karaa hal unugle iyo unugyo badane iyada oo loo eegayo tirada unugyada ee uu leeyahay.
 [[unug]] waa halbeega shaqo iyo dhisme ee ugu yar ee uu leeyahay noole. unugyada ay leeyihiin noolayaashu waxay u qaybsamaan laba kuwa dhamaystiran iyo kuwa dhiman oo aan dhamays tirnayn. 
 sidoo kale cilmiga bayloojigu waxa uu ku shaqo leeyahay barashada meesha uu ku noolyahay noole.
 
 
    By farabadan
+
+[[fr:Catégorie:Biologie]]
+[[ga:Catagóir:Bitheolaíocht]]
+[[gd:Category:Bith-eòlas]]
+[[gl:Category:Bioloxía]]
+[[he:קטגוריה:ביולוגיה]]
+[[hi:श्रेणी:जीव विज्ञान]]
+[[hr:Kategorija:Biologija]]
+[[hsb:Kategorija:Biologija]]
+[[ht:Category:Biyoloji]]
+[[hu:Kategória:Biológia]]
+[[ia:Categoria:Biologia]]
+[[id:Kategori:Biologi]]
+[[io:Category:Biologio]]
+[[is:Flokkur:Líffræði]]
+[[it:Categoria:Biologia]]
+[[ja:Category:生物学]]
+[[jv:Kategori:Biologi]]
+[[ka:კატეგორია:ბიოლოგია]]
+[[kn:ವರ್ಗ:ಜೀವಶಾಸ್ತ್ರ]]
+[[ko:분류:생물학]]
+[[ku:Kategorî:Biyolojî]]
+[[kw:Category:Bewonyeth]]
+[[la:Categoria:Biologia]]
+[[lb:Category:Biologie]]
+[[li:Categorie:Biologie]]
+[[lmo:Category:Biulugía]]
+[[lt:Kategorija:Biologija]]
+[[lv:Kategorija:Bioloģija]]
+[[mi:Category:Mātauranga koiora]]
+[[mk:Категорија:Биологија]]
+[[ms:Kategori:Biologi]]
+[[mt:Category:Bioloġija]]
+[[nah:Categoría:Yolizmatiliztli]]
+[[nds:Kategorie:Biologie]]
+[[nds-nl:Kattegerie:Biologie]]
+[[nl:Categorie:Biologie]]
+[[nn:Kategori:Biologi]]
+[[no:Kategori:Biologi]]
+[[nrm:Category:Biologie]]
+[[oc:Categoria:Biologia]]
+[[os:Категори:Биологи]]
+[[pam:Category:Biologia]]
+[[pl:Kategoria:Biologia]]
+[[pt:Categoria:Biologia]]
+[[ro:Categorie:Biologie]]
+[[ru:Категория:Биология]]
+[[sh:Category:Biologija]]
+[[simple:Category:Biology]]
+[[sk:Kategória:Biológia]]
+[[sl:Kategorija:Biologija]]
+[[sq:Category:Biologji]]
+[[sr:Категорија:Биологија]]
+[[su:Kategori:Biologi]]
+[[sv:Kategori:Biologi]]
+[[sw:Category:Biolojia]]
+[[ta:பகுப்பு:உயிரியல்]]
+[[th:หมวดหมู่:ชีววิทยา]]
+[[tl:Category:Biyolohiya]]
+[[tr:Kategori:Biyoloji]]
+[[uk:Категорія:Біологія]]
+[[ur:زمرہ:حیاتیات]]
+[[vi:Thể loại:Sinh học]]
+[[wa:Categoreye:Biyolodjeye]]
+[[yi:קאַטעגאָריע:ביאלאגיע]]
+[[zh:Category:生物学]]
+[[zh-min-nan:Category:Seng-bu̍t-ha̍k]]
