*Empty MediaWiki Message*

--- a/Ganac.mw
+++ b/Ganac.mw
@@ -12,3 +12,5 @@ Insolintu waa hormoon ka  dhisan 51 amino-asiidh.
 Waa hormoon uu ganacu soo saaro. Waa hormoon ama dheecaan ku lid ah insolinta.
 Dheecaankan shaqadiisu wxey ku lid tahay shaqada insoliinta.
 Labadan dheecaanba si toos ah ayaa dhiiga loogu daraa.
+
+[[Category:Bayoloji]]
