--- a/Unug.mw
+++ b/Unug.mw
@@ -2,3 +2,5 @@ cilmiga barashada waxa nool iyo waxa aad noolayn waxaa loo yaqaan (Biology) Mark
 Zoology; waa barashada xayawaanka ama waxa nool :
 Bootony;waa barashada dhirta waxii la xidhiidha :
 Yaa yaan ku soo koobi karaa
+
+[[Category:Bayoloji]]
