--- a/Cunto_samaysiga.mw
+++ b/Cunto_samaysiga.mw
@@ -8,3 +8,5 @@ noolayaashan waxa u badan [[dhirta]]. dhirtu waxa ay cuntadeeda ka samaysaa biyo
 
 == noolayaasha iyagu ku tiirsan kuwa kale ==
 kuwani waa dhamaan naflayda kale ee dhaqaaqada [[duurjoog]] iyo [[dabjoogba]]. kuwani waxa ay ilaha tamarta ka helaan noolayaasha kale oo ay quutaan sida aadmiga oo quuta dhirta. iyo libaaxa oo quuta aadmiga.
+
+[[Category:Bayoloji]]
