--- a/Unug.mw
+++ b/Unug.mw
@@ -1,3 +1,19 @@
+
+== Unug  ==
+ 
+
+----
+
+''Unuggu'' waa waxa ugu yar ee shaqa qaban kara ee uu ka dhisan yahay nooluhu. Unuggu waa qaybta ugu yar ee dhismo iyo shaqo ee noole kasta. Unugyadu marka ay isu tagaan wexey sameeyaan ''nude''. Nudayaashuna marka ay isu tagaan wexey noqdaan ''xubin''. xubnaha isu tegeyna wexey sameeyaan ''habdhis'' (sida habdhiska taranka, hab dhiska dheefshiidka iwm). habdhisyadu hadey isu tagaan wexey sameeyaan ''noole'' (sida dad ama xayawaan).
+Waxaa jira noolayaal ka samaysan hal unug oo qura sida bakteeriyada, ameebada iwm.
+
+''Sidee ayuu unuggu u samaysan yahay? '' 
+Unuggu ma laha qaab u cayiman oo la tilmaami karo. Unugga waxaa ku dahaaran xuub ka samaysan ''lipidi'' iyo ''fosfolipidi''. Xuubka gudihiisa waxaa ku jira dheecaan (citoplasma). dheecaankaas waxaa dhex heehaabaya waxyaalo kale oo unuggu leeyahay sida ''qalabka golji'', ''ribosoomyada'', ''mitokonderiyada'', ''sentriyoolayaasha'' iwm. Unuggu wuxuu leeyahay bu´. Bu´da waxaa ku dahaaran xuub kale oo iyada uun gaar u ah, xuubkaasoo ka sooca bu´da unugga intiisa kale. Bu´da waxaa ku jira qalabka hiddaha DNA iyo RNA.
+
+
+----
+
+intaba 
 cilmiga barashada waxa nool iyo waxa aad noolayn waxaa loo yaqaan (Biology) Marka aan leenahay Biology waxaa loo qaybiyaa (Zoology iyo Botony) waxaa lagu kala gartaa mid walbaa asataan u gar yuu leeyahay .
 Zoology; waa barashada xayawaanka ama waxa nool :
 Bootony;waa barashada dhirta waxii la xidhiidha :
