--- a/Kurów.mw
+++ b/Kurów.mw
@@ -19,6 +19,7 @@ Mudadii u dhaxaysay [[1431]] iyo [[1442]] tuulada waxay haysatay darajo [[magaal
 [[ba:Курув]]
 [[bar:Kurów]]
 [[bat-smg:Kuruvs]]
+[[bcl:Kurow]]
 [[be:Вёска Кураў (Пулаўскі павет, Люблінскае ваяводства, Польшча)]]
 [[be-x-old:Кураў]]
 [[bg:Куров]]
