روبوت  إضافة: [[jv:Addis Ababa]]

--- a/Addis_Abeba.mw
+++ b/Addis_Abeba.mw
@@ -36,6 +36,7 @@ waa caasimad [[Itoobiya]].
 [[is:Addis Ababa]]
 [[it:Addis Abeba]]
 [[ja:アディスアベバ]]
+[[jv:Addis Ababa]]
 [[ka:ადის-აბება]]
 [[ko:아디스아바바]]
 [[la:Neanthopolis]]
