--- a/Soomaaliland.mw
+++ b/Soomaaliland.mw
@@ -12,7 +12,7 @@ Madaxweyneyaashii Somaliland :
 
 ----
 
-== qaybaha somaliland ==
+== Gobolada Somaliland ==
 
 somaliland waxa ay ka koobanthay lix gobol oo kala ah [[Awdal]] [[Hargaysa]] Saaxil, sanaag, sool iyo  Togdheer.
 
