Interwiki:  + [[lmo:Breinigerberg]]

--- a/Breinigerberg.mw
+++ b/Breinigerberg.mw
@@ -29,6 +29,7 @@
 [[kw:Breinigerberg]]
 [[la:Breinigerberg]]
 [[lb:Breinigerberg]]
+[[lmo:Breinigerberg]]
 [[ms:Breinigerberg]]
 [[nds:Breinigerberg]]
 [[nds-nl:Breinigerberg]]
