Interwiki:  + [[ksh:Kurow]]

--- a/Kurów.mw
+++ b/Kurów.mw
@@ -89,6 +89,7 @@ Mudadii u dhaxaysay [[1431]] iyo [[1442]] tuulada waxay haysatay darajo [[magaal
 [[km:Kurow]]
 [[kn:ಕುರೊವ್]]
 [[ko:쿠루프]]
+[[ksh:Kurow]]
 [[ku:Kurów]]
 [[kv:Курув]]
 [[kw:Kurów]]
