siyaasad ahaan waxa uu qabiilaka isaaqa iyo qabiili kale ay ku dhawaaqeen goni isu taag

--- a/Isaaq.mw
+++ b/Isaaq.mw
@@ -14,12 +14,12 @@ Beesha isaaq waxa ay dagaan woqooyiga [[soomaaliland]] markaa [[1960]] ayay hoos
 jabhadan oo markii [[xukuumadii soomaliya ay dhacday]] xilka la wareegtay woqooyiga soomaliya oo dhan la wareegtay ha ka hor yimaadaan jabhadihii beelaha soomalida woqooyiga sida jabhadii [[SDA]] ( somali Democratic Allience ) ee matalaysay qabiilka [[samaroon]], laakiin khilaafka waxa lagu xaliyay shirkii [[boorama]] ee lagu asaasay xukuumada [[soomaalilaand]]. 
 
 
-*[[Qabaa'ilka Soomaaliya]]
+ SIYAASADA
 
-[[Category:Qabaa%27ilada_Soomaaliya]]
 
-[[de:Isaaq]]
-[[en:Isaaq]]
-[[ja:イサック]]
-[[pt:Isaaq]]
-[[sv:Isaaq]]
+1.maxamed haji ibrahim ciga(madax waynihii ugu horeeyey e somaliland)
+2.ismaciil hure buubaa (wasiirka  waxbarashad  dowlasda somalia)
+3.ahmed maxamed maxamuud (siilaanyo) gudomiyaha xisbiga KULMIYE.
+4.Faysal cali waraabe gudoomiyaha xisbiga siyaasiga   UCID.
+5.adna adan ismacil wasiirkii hore e arimaha dibada somliyeed.
+6.maxamud ahmed ali abihi waxbarashada somaliyeed
