--- a/Category:Badaha.mw
+++ b/Category:Badaha.mw
@@ -4,7 +4,7 @@
 [[ar:تصنيف:بحار]]
 [[ast:Categoría:Mares]]
 [[az:Kateqoriya:Dənizlər]]
-[[bat-smg:Kategorija:Jūras]]
+[[bat-smg:Kateguorėjė:Jūras]]
 [[be-x-old:Катэгорыя:Моры]]
 [[bg:Категория:Морета]]
 [[br:Rummad:Morioù]]
@@ -22,13 +22,14 @@
 [[eu:Kategoria:Itsasoak]]
 [[fi:Luokka:Meret]]
 [[fr:Catégorie:Mer]]
-[[gl:Category:Mares e océanos]]
+[[gl:Categoría:Mares e océanos]]
 [[he:קטגוריה:ימים]]
 [[hr:Kategorija:Mora]]
 [[hu:Kategória:Tengerek]]
 [[ia:Categoria:Mares]]
 [[id:Kategori:Laut]]
 [[ilo:Category:Dagiti Baybay]]
+[[io:Kategorio:Mari]]
 [[is:Flokkur:Höf]]
 [[it:Categoria:Mari]]
 [[ja:Category:海]]
@@ -36,7 +37,7 @@
 [[ko:분류:바다]]
 [[kw:Category:Moryow ha keynvoryow]]
 [[la:Categoria:Mare]]
-[[lb:Category:Mierer]]
+[[lb:Kategorie:Mierer]]
 [[lt:Kategorija:Jūros]]
 [[lv:Kategorija:Jūras]]
 [[ms:Kategori:Laut]]
