--- a/Xisaab.mw
+++ b/Xisaab.mw
@@ -9,4 +9,4 @@ Laba tiro marka la kala jaro wixii ka soo baxa waxaa la yiraahdaa ''farqi''. sid
 3-1=2  farqiga 3 iyo 1 waa 2.
 Laba tiro marka laysku dhufto wixii ka soo baxa waxaa la yiraahdaa ''taran''. sida
 
-2 x 3 = 4.   Taranta 2 iyo 3 waa afar.
+2 x 3 = 6.   Taranta 2 iyo 3 waa lix.
