*Empty MediaWiki Message*

--- a/Xisaab.mw
+++ b/Xisaab.mw
@@ -10,3 +10,6 @@ Laba tiro marka la kala jaro wixii ka soo baxa waxaa la yiraahdaa ''farqi''. sid
 Laba tiro marka laysku dhufto wixii ka soo baxa waxaa la yiraahdaa ''taran''. sida
 
 2 x 3 = 6.   Taranta 2 iyo 3 waa lix.
+
+
+== Ku dar  '''+''' ==
