روبوت  إضافة: [[sv:Erigavo]]

--- a/Ceerigaabo.mw
+++ b/Ceerigaabo.mw
@@ -6,3 +6,4 @@ xarunta  goboklka  sanaag  ee  ceergaabo    waa  dalka   [[Somaliland]] by xusee
 [[en:Ceerigaabo]]
 [[es:Erigabo]]
 [[pt:Erigavo]]
+[[sv:Erigavo]]
