روبوت  إضافة: [[pt:Bardera]]

--- a/Buunadada_Bardhere.mw
+++ b/Buunadada_Bardhere.mw
@@ -68,8 +68,9 @@ Xubnaha Jameecada badankii waxay ka yimaadaan miyiga nawaaxiga degmada Baardheer
 13. Sheikh Hirow Moallin Ahmed - ayaa hogaanka Jameecada haya ilaa 1992 - waqti xaadirkant.
 
 
-[[Category:Magaalooyinka Soomaaliya]] 
-			
+[[Category:Magaalooyinka Soomaaliya]]
+
 [[de:Baardheere]]
 [[en:Bardera]]
 [[gl:Bardera - Baardheere]]
+[[pt:Bardera]]
