--- a/Bari_(Gobol).mw
+++ b/Bari_(Gobol).mw
@@ -42,5 +42,6 @@ Gobolkan waxaa magaala madaxdiisu tahay Boosaaso dhaqaalihiisuna waxa uu ku tiir
 [[fi:Bari (Somalia)]]
 [[fr:Bari (Somalie)]]
 [[it:Bari (regione della Somalia)]]
+[[jv:Bari, Somalia]]
 [[nl:Bari (Somalië)]]
 [[pt:Bari (Somália)]]
