روبوت  إضافة: [[jv:Banaadir]]

--- a/Mohammed_Abdirahman_Omar.mw
+++ b/Mohammed_Abdirahman_Omar.mw
@@ -55,5 +55,6 @@ image_location = Somalia_regions_map_Banaadir.svg|
 [[fr:Banaadir]]
 [[id:Banaadir]]
 [[it:Banaadir]]
+[[jv:Banaadir]]
 [[pt:Banaadir]]
 [[sv:Banaadir]]
