روبوت  إضافة: [[jv:Bakool]]

--- a/Bakool.mw
+++ b/Bakool.mw
@@ -40,5 +40,6 @@ Gobolkan waxaa magaala madaxdiisu tahay Xudur dhaqaalihiisuna waxa uu ku tiirsan
 [[fr:Bakool]]
 [[id:Bakool]]
 [[it:Bakool]]
+[[jv:Bakool]]
 [[nl:Bakool]]
 [[pt:Bakool]]
