--- a/Baay.mw
+++ b/Baay.mw
@@ -40,5 +40,6 @@ Gobolka Bay magaalo madaxdiisa waa Baydhabo, dhaqaalihiisuna wuxuu ku tiirsanyah
 [[eu:Bay (Somalia)]]
 [[fr:Bay (Somalie)]]
 [[it:Bay (regione della Somalia)]]
+[[jv:Bay, Somalia]]
 [[nl:Bay (Somalië)]]
 [[pt:Bay]]
